--- a/gateway/html/index.html
+++ b/gateway/html/index.html
@@ -1,13 +1,15 @@
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Home Page</title>
-	<link rel="stylesheet" href="/css/index.css">
+	<meta charset="utf-8">
+	<title>seesee</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
-	<script src="/js/index.js"></script>
+	<p>home page</p>
 </body>
 
 </html>
