--- a/web-pwa/public/index.html
+++ b/web-pwa/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
   <!-- https://web.dev/uses-rel-preconnect -->
   <link rel="preconnect" href="https://storage.googleapis.com">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,14 +19,16 @@
   <meta name="twitter:card" content="summary" data-react-helmet="true" />
   <meta property="og:type" content="website" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+
+  <!-- 
+    manifest.json provides metadata used when your web app is installed on a 
+    user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+  -->
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials" />
+
   <!-- https://web.dev/defer-non-critical-css/ -->
-  <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" as="style"
-    onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
   <title>React PWA</title>
 
